temp/1733700680.126333-601e3282d16940a5aeda3ac3f0208c36/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  tls:
  - hosts:
    - 34.107.170.82  # Use your Ingress IP here
    secretName: my-tls-secret
  rules:
  - http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
      - path: /secure
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
